<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:theme="@style/Theme.CloudDemo"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:contentDescription="@string/back"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconTint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="291dp"
        android:layout_height="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/verify_code"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/verify_code_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textColor="#646A73"
        android:text="@string/verify_code_desc"
        />


    <com.example.user.components.VerifyCodeInput
        android:id="@+id/verify_code_input"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/verify_code_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        >
    </com.example.user.components.VerifyCodeInput>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/common_edge_margin"
        app:layout_constraintTop_toBottomOf="@+id/verify_code_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/verify_code_time_layout"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/verify_code_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_btn_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code_retry_time"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_code_retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/verify_code_retry"
            android:padding="0dp"
            android:visibility="visible"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>